resource: Fix saving a modified object again

If the resource has been saved correctly in the database, we need to set
to TRUE the "is-from-table" data related to the GomResource object. This
data is used to set the "is_from_table" internal variable.

https://bugzilla.gnome.org/show_bug.cgi?id=742925